[gd_scene load_steps=2 format=3 uid="uid://bhrf58bloq2f4"]

[ext_resource type="Script" path="res://DashComponent.gd" id="1_5v55g"]

[node name="DashComponent" type="Node2D"]
script = ExtResource("1_5v55g")

[node name="dash_timer" type="Timer" parent="."]

[node name="cooldown_timer" type="Timer" parent="."]
